# fmod-gdextension

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Android.mk  CMakeLists.txt  LICENSE  README.md  SConstruct  SCsub  android.py  callbacks.h  config.py  fmod-gdextension-vs.vcxproj  fmod-gdextension-vs.vcxproj.filters  fmod-gdextension.sln  fmod-gdextension.vcxproj  gdlibrary.cpp  getFmodAPIScript.sh  get_fmod.py  godot_fmod.cpp  godot_fmod.h  register_types.cpp  register_types.h  test_documentation.py
.github/workflows/: all_builds.yml  android_builds.yml  check_pr.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  receive_pr.yml  release.yml  test_export.yml  windows_builds.yml
.travis/: download-godot-linux-headless.sh  download-ndk.sh
android-plugin/: .gitignore  build.gradle.kts  settings.gradle.kts
demo/: .gitignore  .gut_editor_config.json  .gutconfig.json  appstore.png.import  export_presets.cfg  icon.png.import  icon.svg.import  project.godot  run_tests.sh
demo/.godot/: export_credentials.cfg  extension_list.cfg  global_script_class_cache.cfg
demo/Scenes/: FmodScriptTest.tscn  FmodTest.gd  FmodTest.tscn  GdScriptTest.tscn  Listener.gd  Main.tscn  icon2.gd
demo/Script/: ChangeColor.gd  Emitter.gd  EnterAndLeave.gd  EnterandLeave2.gd  FmodTest.gd  Listener.gd  Listener2.gd
demo/Scripts/: FMOD.gd  Listener.gd  Main.gd
demo/android/: .build_version  .gitignore
demo/fmod/: fmod_config.cfg
demo/high_level/: Emitter.gd  FmodNodesTest.gd  FmodNodesTest.tscn
demo/high_level_2D/: ChangeColor.gd  ChangeColor.gd.uid  ChooseLanguageButton.gd  ChooseLanguageButton.gd.uid  Emitter.gd  Emitter.gd.uid  FmodNodesTest.tscn  Kinematic.gd  Kinematic.gd.uid  SayWelcomeButton.gd  SayWelcomeButton.gd.uid  footstep.tscn  sin_move.gd  sin_move.gd.uid
demo/high_level_3D/: FPSCounter.gd  FPSCounter.gd.uid  World.tscn  rollingball.gd  rollingball.gd.uid  selfdestroy.gd  selfdestroy.gd.uid
demo/low_level/: ChangeColor.gd  Emitter.gd  EnterAndLeave.gd  EnterandLeave2.gd  FmodNodesTest.tscn  FmodScriptTest.tscn  FmodTest.gd  Listener2.gd
demo/low_level_2D/: ChangeColor.gd.uid  Emitter.gd  Emitter.gd.uid  EnterAndLeave.gd  EnterAndLeave.gd.uid  EnterandLeave2.gd.uid  FmodScriptTest.tscn  FmodTest.gd  FmodTest.gd.uid  LangChooseButton.gd  LangChooseButton.gd.uid  Listener.gd  Listener.gd.uid  Listener2.gd.uid  OtherScene.tscn  WelcomeButton.gd  WelcomeButton.gd.uid
demo/test/: Empty_Scene.tscn  tests.tscn
doc_classes/: FmodBank.xml  FmodBankLoader.xml  FmodBus.xml  FmodEvent.xml  FmodEventDescription.xml  FmodEventEmitter3D.xml  FmodListener2D.xml  FmodListener3D.xml  FmodParameterDescription.xml  FmodServer.xml  FmodVCA.xml
docs/: COMPILING.md  mkdocs.yml
jni/: Application.mk
src/: constants.h  fmod_cache.cpp  fmod_cache.h  fmod_logging.cpp  fmod_logging.h  fmod_server.cpp  fmod_server.h  fmod_string_names.cpp  fmod_string_names.h  gdlibrary.cpp  godot_fmod.cpp  godot_fmod.h  pointer_array.h  register_types.cpp  register_types.h
src/api/: FmodBank.h  FmodBus.h  FmodEvent.h  FmodEventDescription.h  FmodVCA.h  fmod_bank.cpp  fmod_bank.h  fmod_bus.cpp  fmod_bus.h  fmod_event.cpp  fmod_event.h  fmod_event_description.cpp  fmod_event_description.h  fmod_object.h  fmod_vca.cpp  fmod_vca.h
src/callback/: event_callbacks.cpp  event_callbacks.h  file_callbacks.cpp  file_callbacks.h
src/core/: fmod_channel_group.cpp  fmod_channel_group.h  fmod_file.cpp  fmod_file.h  fmod_sound.cpp  fmod_sound.h
src/data/: performance_data.cpp  performance_data.h
src/helpers/: common.h  constants.h  containers.h  conversions.h  current_function.h  files.h  fmod_object.h  maths.h
src/nodes/: fmod_bank_loader.cpp  fmod_bank_loader.h  fmod_event_emitter.cpp  fmod_event_emitter.h  fmod_event_emitter_2d.cpp  fmod_event_emitter_2d.h  fmod_event_emitter_3d.cpp  fmod_event_emitter_3d.h  fmod_listener.h  fmod_listener_2d.cpp  fmod_listener_2d.h  fmod_listener_3d.cpp  fmod_listener_3d.h
src/studio/: fmod_bank.h  (+12 more)
(+587 files in other folders)
