cmake_minimum_required(VERSION 3.13)
project(GodotFmod)

set(CMAKE_CXX_STANDARD 14)

if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set(APPLE TRUE)
endif()

link_directories("../godot-cpp/bin/")
include_directories("../godot-cpp/include/")
include_directories("../godot-cpp/include/core")
include_directories("../godot-cpp/include/gen")
include_directories("../godot-cpp/godot_headers")
if(UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()
if (LINUX)
    link_directories("../libs/fmod/linux/lowlevel/lib/x86_64/")
    link_directories("../libs/fmod/linux/studio/lib/x86_64/")
    include_directories(../libs/fmod/linux/lowlevel/inc ../libs/fmod/linux/studio/inc)
endif ()
if (APPLE)
    link_directories("../libs/fmod/osx/lowlevel/lib/")
    link_directories("../libs/fmod/osx/studio/lib/")
    include_directories(../libs/fmod/osx/lowlevel/inc ../libs/fmod/osx/studio/inc)
endif ()
if (WIN32 OR WIN64)
    link_directories(../libs/fmod/windows/lowlevel/lib/)
    link_directories(../libs/fmod/windows/studio/lib/)
    include_directories(../libs/fmod/windows/lowlevel/inc ../libs/fmod/windows/studio/inc)
endif ()
add_library(GodotFmod SHARED godot_fmod.cpp godot_fmod.cpp godot_fmod.h gdlibrary.cpp)
if (APPLE)
    target_link_libraries(GodotFmod libgodot-cpp.osx.64.a libfmod.dylib libfmodstudio.dylib)
endif ()
if (WIN32 OR WIN64)
    target_link_libraries(GodotFmod libgodot-cpp.windows.64.lib fmod64.dll fmodstudio64.dll)
endif ()
if (LINUX)
    target_link_libraries(GodotFmod libgodot-cpp.linux.64.a libfmod.so libfmodstudio.so)
endif()