cmake_minimum_required(VERSION 3.13)
project(GodotFmod)

set(CMAKE_CXX_STANDARD 14)
set(OS "windows")
set(ARCH "")

link_directories("../godot-cpp/bin/")
include_directories("../godot-cpp/include/")
include_directories("../godot-cpp/include/core")
include_directories("../godot-cpp/include/gen")
include_directories("../godot-cpp/godot_headers")
link_directories("../libs/fmod/${OS}/core/lib/${ARCH}")
link_directories("../libs/fmod/${OS}/studio/lib/${ARCH}")
include_directories(../libs/fmod/${OS}/core/inc ../libs/fmod/${OS}/studio/inc)
add_library(GodotFmod SHARED src/godot_fmod.cpp src/godot_fmod.h src/gdlibrary.cpp src/helpers/current_function.h src/helpers/containers.h src/callback/event_callbacks.h src/callback/file_callbacks.h src/callback/file_callbacks.cpp src/callback/event_callbacks.cpp)
if (${OS} EQUAL "osx")
    target_link_libraries(GodotFmod libgodot-cpp.osx.64.a libfmod.dylib libfmodstudio.dylib)
endif ()
if (${OS} EQUAL "windows")
    target_link_libraries(GodotFmod libgodot-cpp.windows.64.lib fmod64.dll fmodstudio64.dll)
endif ()
if (${OS} EQUAL "linux")
    target_link_libraries(GodotFmod libgodot-cpp.linux.64.a libfmod.so libfmodstudio.so)
endif()